--- a/pom.xml
+++ b/pom.xml
@@ -246,7 +246,21 @@
       <artifactId>akka-kryo-serialization_${scala.version}</artifactId>
       <version>0.4.1</version>
     </dependency>
-
+    <dependency>
+      <groupId>com.google.apis</groupId>
+      <artifactId>google-api-services-vision</artifactId>
+      <version>v1-rev30-1.22.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.thetransactioncompany</groupId>
+      <artifactId>jsonrpc2-client</artifactId>
+      <version>1.14.4</version>
+    </dependency>
+    <dependency>
+      <groupId>com.mashape.unirest</groupId>
+      <artifactId>unirest-java</artifactId>
+      <version>1.4.9</version>
+    </dependency>
   </dependencies>
 
   <build>
